aligned all photos and search box on the page correctly using flexbox

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,39 @@
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .wrapper {
     width: 100%;
     position: fixed;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;ß
+}
+
+.search {
+    width: 460px;
+    margin: 30px auto 0;
+    padding: 10px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    font-size: 16pt;
+    color: lightgrey;
 }
 
 .photo-gallery {
     width: 980px;
-    margin: 0 auto;
+    margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     algin-items: center;
     flex-flow: wrap;
+    justify-content: space-between;
 }
 
 .photo {
     width: 200px;
     height: 200px;
-    margin: auto;
+    margin-top: 30px;
 }
